--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
 {
     "version": 2,
-    "build" : [ {"src" : "./index.js" , "use" : "@vercel/node" }],
-    "routes" : [{"src" : "/(.*)" , "dest" : "/"}]
+    "build": [
+        {
+            "src": "./index.js",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/"
+        }
+    ],
+    "buildCommand": "next build"
 }
