--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,11 @@
 {
     "version": 2,
-    "builds": {
-        "src": "./index.js",
-        "use": "@vercel/node"
-    },
+    "builds": [
+        {
+            "src": "./index.js",
+            "use": "@vercel/node"
+        }
+    ],
     "routes": [
         {
             "src": "/(.*)",
@@ -11,4 +13,3 @@
         }
     ]
 }
-
